java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint8.pass
package org.netbeans.test.java.hints;

import javax.swing.JList;
import org.netbeans.test.java.hints.pkg.ImplementAbstractMethods8Usee;

/**
 * @author leon
 */
public class ImplementAbstractMethods8 {
    
    private static class Inner {
        
        private static class InnerInner extends ImplementAbstractMethods8Usee {
            public void doStuff(JList list) {
            }
        }
        
    }
    
    public ImplementAbstractMethods8() {
    }
    
}
